# Machine-Learning

./: .gitignore  README.txt  pyproject.toml  readme.html  readme.org
homework/: .gitignore  1.org
portfolio/: decision_stumps.py  knn.py  perceptron.py  svm.py  visualize.py
project1/: .gitignore  pyproject.toml  readme.org
project1/portfolio/: decision_stumps.py  linear_regression.py  visualize.py
project1/src/: linear_regression.py  ml.py  visualize.py
