[tool.poetry]
name = "base"
version = "0.0.0-SNAPSHOT"
description = ""
authors = ["Brian Brunner <brian.brunner@mines.sdsmt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
matplotlib = "^3.3.1"
numpy = "^1.19.2"
scikit-learn = "^0.23.2"
mpld3 = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
