[tool.poetry]
name = "base"
version = "0.0.0-SNAPSHOT"
description = ""
authors = ["Brian Brunner <brian.brunner@mines.sdsmt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
matplotlib = "^3.3.1"
numpy = "^1.19.2"
scikit-learn = "^0.23.2"
mpld3 = "^0.5.1"
ansi2html = "^1.6.0"


[tool.poetry.dev-dependencies]
pyls-isort = "^0.2.0"
importmagic = "^0.1.7"
epc = "^0.0.5"
wrapt = "^1.12.1"
mypy-ls = "^0.3.6"
pylint = "^2.6.0"
PyQt5 = "^5.15.2"
[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
